# inventory_analysis

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  mlflow.db  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: app.py  data_ingestion.py  data_transformation.py  exception.py  logger.py  model_evaluation.py  model_pipeline.py  model_trainer.py  predict_pipeline.py  streamlit_app.py
templates/: index.html
tests/: test_api.py  test_data_quality.py  test_pipeline.py
